--- a/templates/index.html
+++ b/templates/index.html
@@ -5,69 +5,79 @@
 
 {% block styles %}
 {{super()}}
-    <link rel="stylesheet" href="{{url_for('.static', filename='index.css')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='index.css')}}">
 {% endblock %}
 
 {% block page_content %}
 
 
 <div class="jumbotron">
-        <h1 id = "greeting">Welcome. Sign in to unlock The vibes.</h1>
-        <p class="lead">That's right. A website just for your memes.</p>
-        <a href="{{url_for('signIn')}}" type="button" id = "signInButton" class="btn btn-primary">Sign In</a>
-        <br>
-        <a href="{{url_for('signIn')}}" type="button" class="btn btn-primary">Create an Account</a>
+  <h1 id="greeting">Welcome. Sign in to unlock The vibes.</h1>
+  <p class="lead">That's right. A website just for your memes.</p>
+  <a href="{{url_for('signIn')}}" type="button" id="signInButton" class="btn btn-primary">Sign In</a>
+  <br>
+  <a href="{{url_for('signIn')}}" type="button" class="btn btn-primary">Create an Account</a>
 </div>
 
-    <div class="row">
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <figure class="figure">
-                <img src="{{url_for('.static', filename='placeholder.png')}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-            </figure>
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
-                </div>
-                <small class="text-muted">by Username</small>
-              </div>
-            </div>
+<div class="row">
+  <div class="col-md-4">
+    <div class="card mb-4 shadow-sm">
+      <figure class="figure">
+        <img src="{{url_for('.static', filename='placeholder.png')}}" class="figure-img img-fluid rounded"
+          alt="A generic square placeholder image with rounded corners in a figure.">
+      </figure>
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
           </div>
+          <small class="text-muted">by Username</small>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <figure class="figure">
-                <img src="{{url_for('.static', filename='placeholder.png')}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-            </figure>
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
-                </div>
-                <small class="text-muted">by Username</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <figure class="figure">
-                <img src="{{url_for('.static', filename='placeholder.png')}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-            </figure>
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
-                </div>
-                <small class="text-muted">by Username</small>
-              </div>
-            </div>
-          </div>
-        </div>
+      </div>
     </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card mb-4 shadow-sm">
+      <figure class="figure">
+        <img src="{{url_for('.static', filename='placeholder.png')}}" class="figure-img img-fluid rounded"
+          alt="A generic square placeholder image with rounded corners in a figure.">
+      </figure>
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
+          </div>
+          <small class="text-muted">by Username</small>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card mb-4 shadow-sm">
+      <figure class="figure">
+        <img src="{{url_for('.static', filename='placeholder.png')}}" class="figure-img img-fluid rounded"
+          alt="A generic square placeholder image with rounded corners in a figure.">
+      </figure>
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
+          </div>
+          <small class="text-muted">by Username</small>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Only for testing uploading pics to the database. The feature will become more fleshed out as the website develops -->
+<h1>File Upload</h1>
+<form method="POST" action="" enctype="multipart/form-data">
+  <p><input type="file" name="file"></p>
+  <p><input type="submit" value="Submit"></p>
+</form>
 
 {% endblock %}
