--- a/templates/memeCardRow.html
+++ b/templates/memeCardRow.html
@@ -1,4 +1,4 @@
-{% macro memeCardRow() %}
+{% macro memeCardRow(memes) %}
 
 <link rel="stylesheet" href="{{url_for('static', filename='memeCardRow.css')}}">
 
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-sm-4">
         <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="./static/memes_img/placeholder.png" alt="Card image cap">
+            <img class="card-img-top" src="{{ url_for('.static', filename='memes/' + memes[0].name) }}" alt="Card image cap">
             <div class="card-body">
                 <p class="card-text">Meme Title</p>
                 <div class="buttons">
@@ -18,7 +18,7 @@
     </div>
     <div class="col-sm-4">
         <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="./static/memes_img/placeholder.png" alt="Card image cap">
+            <img class="card-img-top" src="{{ url_for('.static', filename='memes/' + memes[1].name) }}" alt="Card image cap">
             <div class="card-body">
                 <p class="card-text">Meme Title</p>
                 <div class="buttons">
@@ -30,7 +30,7 @@
     </div>
     <div class="col-sm-4">
         <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="./static/memes_img/placeholder.png" alt="Card image cap">
+            <img class="card-img-top" src="{{ url_for('.static', filename='memes/' + memes[2].name) }}" alt="Card image cap">
             <div class="card-body">
                 <p class="card-text">Meme Title</p>
                 <div class="buttons">
