--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,8 +25,10 @@
     </div>
 </div>
 
+{% if memes|length > 2 %}
+    {{ memeCardRow(memes) }}
+{% endif %}
 
-{{ memeCardRow() }}
 
 <h1>File Upload</h1>
 <form method="POST" action="" enctype="multipart/form-data">
