--- a/static/profile.css
+++ b/static/profile.css
@@ -11,6 +11,12 @@
 }
 
 #upload {
-    margin-top: 2rem;
+    width: 20rem;
+    padding-top: 2.5rem;
     text-align: center;
+    margin-top: 3.5rem;
+    margin-bottom: 3.5rem;
+    padding-bottom: 2.5rem;
+    border-radius: 5px;
+    border: 1px solid #777777;
 }
