--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,12 @@
         <a class="navbar-brand" href="/">Memepedia</a>
       </div>
       <ul class="nav navbar-nav">
+        <li>
+        {% if current_user.is_authenticated %}
+            <p class="navbar-text" id="nav_current_user">signed in as {{ current_user.username }}</p>
+        {% endif%}
+        </li>
         <li><a href="/home">Home</a></li>
-        <li><a href="/signup">Sign Up</a></li>
         <li>
           <a href="/profile">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-square" fill="currentColor"
