--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
   {% block page_content %}{% endblock %}
 
   <footer class="footer bg-dark">
-    <p>&copy; Company 2020</p>
+    <p>&copy; Team17 2020</p>
   </footer>
 
 </div>
