--- a/static/home.css
+++ b/static/home.css
@@ -1,7 +1,7 @@
 #banner{
     margin-top: 0; margin-bottom: 3%;
     text-align: center;
-    padding-top: 10%; padding-bottom: 10%;
+    padding-top: 2rem; padding-bottom: 2rem;
     /* background-image: url("{{url_for('static',filename='memes_img/banner.jpg')}}"); */
     background-image: linear-gradient(to right, white, rgba(255, 255, 255, 0), white), url("/static/memes_img/banner.jpg");
     background-position: center center;
@@ -14,6 +14,11 @@
 }
 
 h2{
-    font-size: x-large;
+    font-size: large;
     margin-top: 5%;
+}
+
+#greeting{
+    color: white;
+    -webkit-text-stroke: 1px black;
 }
