--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,6 @@
 
 {% block page_content %}
 
-<div class="container">
     <div class="jumbotron">
         <div class="row">
             <div class="col-xs-6">
@@ -23,15 +22,23 @@
             </div>
         </div>
     </div>
+
+<div id="user_uploads">
+    <h3>Your Posts</h3>
+    {% if memes|length > 6 %}
+        {{ memeCardRow(memes[0:3]) }}
+        {{ memeCardRow(memes[3:6]) }}
+        {{ memeCardRow(memes[6:]) }}
+    {% elif memes|length > 3 %}
+        {{ memeCardRow(memes[0:3]) }}
+        {{ memeCardRow(memes[3:6]) }}
+    {% elif memes|length > 0 %}
+        {{ memeCardRow(memes[0:3]) }}
+    {% else %}
+        <h1>Ah Snap! You're fresh out of memes!</h1>
+    {% endif %}
+
 </div>
-
-{% if memes|length > 0 %}
-    {{ memeCardRow(memes) }}
-{% else %}
-    <h1>Ah Snap! You're fresh out of memes!</h1>
-{% endif %}
-
-
 
 <form id="upload" method="POST" action="" enctype="multipart/form-data">
     <label for="name_input" class="btn btn-primary">
