--- a/templates/base.html
+++ b/templates/base.html
@@ -28,9 +28,9 @@
             <p class="navbar-text" id="nav_current_user">signed in as {{ current_user.username }}</p>
         {% endif%}
         </li>
-        <li><a href="/home">Home</a></li>
+        <li><a href="{{url_for('.home')}}">Home</a></li>
         <li>
-          <a href="/profile">
+          <a href="{{url_for('.profile')}}">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-square" fill="currentColor"
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd"
