--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
 <div id="banner">
   <h1 id="greeting">Welcome. Sign In to Unlock The Vibes.</h1>
   <form method="post">
-    <a href="/signIn" type="button" class="btn btn-primary">Sign In</a>
-    <a href="/signup" type="button" class="btn btn-secondary">Create an Account</a>
+    <a href="{{url_for('.signIn')}}" type="button" class="btn btn-primary">Sign In</a>
+    <a href="{{url_for('.signUp')}}" type="button" class="btn btn-secondary">Create an Account</a>
   </form>
 </div>
 
