--- a/templates/memeCardRow.html
+++ b/templates/memeCardRow.html
@@ -11,7 +11,15 @@
             <div class="card-body">
                 <p class="card-text"></p>
                 <div class="buttons">
-                    <a href="#" class="btn btn-primary">Like</a>
+                    <div>
+                        <form action="{{ url_for('like') }}" method="post">
+                            <input type="hidden" value="{{ memes[0].likes }}" name="like" />
+                            <input type="hidden" value="{{ memes[0].id }}" name="meme_liked" />
+                            <input type="hidden" value="home" name="like_type" />
+                            <input type="submit" value="Like" class="btn btn-primary" />
+                        </form>
+                        <p class="likes">{{ memes[0].likes }}</p>
+                    </div>
 
 
                 </div>
@@ -26,7 +34,15 @@
             <div class="card-body">
                 <p class="card-text"></p>
                 <div class="buttons">
-                    <a href="#" class="btn btn-primary">Like</a>
+                    <div>
+                        <form action="{{ url_for('like') }}" method="post">
+                            <input type="hidden" value="{{ memes[1].likes }}" name="like" />
+                            <input type="hidden" value="{{ memes[1].id }}" name="meme_liked" />
+                            <input type="hidden" value="home" name="like_type" />
+                            <input type="submit" value="Like" class="btn btn-primary" />
+                        </form>
+                        <p class="likes">{{ memes[1].likes }}</p>
+                    </div>
 
 
 
@@ -42,7 +58,15 @@
             <div class="card-body">
                 <p class="card-text"></p>
                 <div class="buttons">
-                    <a href="#" class="btn btn-primary">Like</a>
+                    <div>
+                        <form action="{{ url_for('like') }}" method="post">
+                            <input type="hidden" value="{{ memes[2].likes }}" name="like" />
+                            <input type="hidden" value="{{ memes[2].id }}" name="meme_liked" />
+                            <input type="hidden" value="home" name="like_type" />
+                            <input type="submit" value="Like" class="btn btn-primary" />
+                        </form>
+                        <p class="likes">{{ memes[2].likes }}</p>
+                    </div>
 
 
                 </div>
