--- a/templates/memeCardRowUser.html
+++ b/templates/memeCardRowUser.html
@@ -13,7 +13,15 @@
             <div class="card-body">
                 <p class="card-text"></p>
                 <div class="buttons">
-                    <a href="#" class="btn btn-primary">Like</a>
+                    <div>
+                        <form action="{{ url_for('like') }}" method="post">
+                            <input type="hidden" value="{{ memes[0].likes }}" name="like" />
+                            <input type="hidden" value="{{ memes[0].id }}" name="meme_liked" />
+                            <input type="hidden" value="user" name="like_type" />
+                            <input type="submit" value="Like" class="btn btn-primary" />
+                        </form>
+                        <p class="likes">{{ memes[0].likes }}</p>
+                    </div>
 
                     <form action="{{ url_for('delete') }}" method="post" class="delete">
                         <input type="hidden" value="{{ memes[0].id }}" name="meme_to_delete" />
@@ -32,7 +40,16 @@
             <div class="card-body">
                 <p class="card-text"></p>
                 <div class="buttons">
-                    <a href="#" class="btn btn-primary">Like</a>
+                    <div>
+                        <form action="{{ url_for('like') }}" method="post">
+                            <input type="hidden" value="{{ memes[1].likes }}" name="like" />
+                            <input type="hidden" value="{{ memes[1].id }}" name="meme_liked" />
+                            <input type="hidden" value="user" name="like_type" />
+                            <input type="submit" value="Like" class="btn btn-primary" />
+                        </form>
+                        <p class="likes">{{ memes[1].likes }}</p>
+                    </div>
+
 
                     <form action="{{ url_for('delete') }}" method="post" class="delete">
                         <input type="hidden" value="{{ memes[1].id }}" name="meme_to_delete" />
@@ -51,7 +68,15 @@
             <div class="card-body">
                 <p class="card-text"></p>
                 <div class="buttons">
-                    <a href="#" class="btn btn-primary">Like</a>
+                    <div>
+                        <form action="{{ url_for('like') }}" method="post">
+                            <input type="hidden" value="{{ memes[2].likes }}" name="like" />
+                            <input type="hidden" value="{{ memes[2].id }}" name="meme_liked" />
+                            <input type="hidden" value="user" name="like_type" />
+                            <input type="submit" value="Like" class="btn btn-primary" />
+                        </form>
+                        <p class="likes">{{ memes[2].likes }}</p>
+                    </div>
 
                     <form action="{{ url_for('delete') }}" method="post" class="delete">
                         <input type="hidden" value="{{ memes[2].id }}" name="meme_to_delete" />
