--- a/templates/profile.html
+++ b/templates/profile.html
@@ -57,6 +57,6 @@
 </div>
 
 
-<a href="/signout" type="button" class="btn btn-danger">Sign Out</a>
+<a href="{{url_for('.signout')}}" type="button" class="btn btn-danger">Sign Out</a>
 
 {% endblock %}
