--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
   <nav class="navbar">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Memepedia</a>
+        <a class="navbar-brand" href="{{url_for('.index')}}">Memepedia</a>
       </div>
       <ul class="nav navbar-nav">
         <li>
