--- a/static/index.css
+++ b/static/index.css
@@ -23,9 +23,9 @@
       rgba(255, 255, 255, 0),
       white
     ),
-    url("/static/memes_img/banner.jpg");
+    url(https://images.pexels.com/photos/1053687/pexels-photo-1053687.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
   background-position: center center;
-  background-size: auto 120%;
+  background-size: cover;
   background-repeat: no-repeat;
   border-top-style: solid;
   border-color: #777;
