--- a/static/base.css
+++ b/static/base.css
@@ -1,37 +1,51 @@
-
-.navbar-nav{
-    float: right;
-    margin-right: 2rem;
+.navbar-nav {
+  float: right;
+  margin-right: 2rem;
 }
 
 .navbar {
-    border-radius: 0 !important;
-    border-bottom: .05rem solid #777;
+  border-radius: 0 !important;
+  border-bottom: 0.05rem solid #777;
 }
 
-.navbar-brand{
-    font-size: x-large;
-    color: #0275d8;
+.navbar-brand {
+  font-size: x-large;
+  color: #337ab7;
+}
+
+body{
+  background-color: black !important;
+  color: #f7f7f7;
 }
 
 .footer {
-    margin-top: 2rem;
-    padding-top: 1.5rem;
-    color: #777;
-    border-top: .05rem solid #e5e5e5;
+  margin-top: 2rem;
+  padding-top: 1.5rem;
+  color: #777;
+  border-top: 0.05rem solid #e5e5e5;
 }
 
-@media (min-width: 70rem) {
-    .container {
-        max-width: 80rem;
-    }
+@media (min-width: 1300px) {
+  .container {
+    max-width: 100rem;
+  }
 }
 
 .container-narrow > hr {
-    margin: 2rem 0;
+  margin: 2rem 0;
 }
 
-.card .btn {
-    font-size: x-small;
-    padding: 0.1rem 0.8rem;
+#nav_current_user{
+  color: #777777;
+  font-size: smaller;
+  padding-top: 0.2rem;
+}
+
+.bi-person-square{
+  margin-bottom: -0.2rem;
+}
+
+.modal-content{
+  background-color: black !important;
+  border: 1px solid #777;
 }
