--- a/static/home.css
+++ b/static/home.css
@@ -1,19 +1,36 @@
 #banner{
     margin-top: 0; margin-bottom: 3%;
-    text-align: center;
-    padding-top: 5%; padding-bottom: 5%;
-    /* background-image: url("{{url_for('static',filename='memes_img/banner.jpg')}}"); */
-    background-image: linear-gradient(to right, white, rgba(255, 255, 255, 0), white), url("/static/memes_img/banner.jpg");
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    padding-left: 5rem;
+    padding-top: 1rem; padding-bottom: 1rem;
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), #337ab7);
     border-top-style: solid;
     border-color: #777;
     border-bottom-style: solid;
     border-width: 0.05rem;
+    height:5rem;
+    vertical-align: center;
 }
 
-h2{
-    font-size: x-large;
-    margin-top: 5%;
+.dropdown{
+    float:left;
+}
+
+.dropdown-toggle{
+    background: black;
+    border: 1px solid #777;
+}
+
+.dropdown-menu>li>a{
+    color: #337ab7 !important;
+}
+
+.dropdown-menu{
+    background: black;
+    border: 1px solid #777;
+}
+
+#dank{
+    float: right;
+    text-align: right;
+    padding-right: 2rem;
 }
