--- a/static/index.css
+++ b/static/index.css
@@ -1,46 +1,39 @@
-.btn-primary{
-    margin-top: 2rem;
-    width: 150px;
-    margin-right: 2rem;
+.btn-primary {
+  margin-top: 1rem;
+  width: 150px;
+  margin-right: 1rem;
 }
-.btn-secondary{
-    margin-top: 2rem;
-    width: 150px;
-    margin-left: 2rem;
-    background-color: rgb(226, 226, 226)
-}
-
-#greeting{
-    font-size: xx-large;
+.btn-secondary {
+  margin-top: 1rem;
+  width: 150px;
+  margin-left: 1rem;
+  background-color: rgb(226, 226, 226);
 }
 
-#banner{
-    margin-top: 0; margin-bottom: 3%;
-    text-align: center;
-    padding-top: 10%; padding-bottom: 10%;
-    /* background-image: url("{{url_for('static',filename='memes_img/banner.jpg')}}"); */
-    background-image: linear-gradient(to right, white, rgba(255, 255, 255, 0), white), url("/static/memes_img/banner.jpg");
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border-top-style: solid;
-    border-color: #777;
-    border-bottom-style: solid;
-    border-width: 0.05rem;
+#banner {
+  margin-top: 0;
+  margin-bottom: 3%;
+  text-align: center;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), #337ab7);
+  border-top-style: solid;
+  border-color: #777;
+  border-bottom-style: solid;
+  border-width: 0.05rem;
 }
 
-#memes_carousel{
-    width: 100%;
-    margin: auto;
-    padding-bottom: 1rem;
+#memes_carousel {
+  width: 100%;
+  margin: auto;
+  padding-bottom: 1rem;
 }
 
 .carousel {
-    border-radius: 5px 5px 5px 5px;
-    overflow: hidden;
+  border-radius: 5px 5px 5px 5px;
+  overflow: hidden;
 }
 
-.carousel-inner img{
-    margin: auto;
+.carousel-inner img {
+  margin: auto;
 }
-
