--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,23 @@
-{% extends "bootstrap/base.html" %}
+<!doctype html>
 
-{% block title %}Memepedia{% endblock %}
+{% block title %}Dank Dungeon{% endblock %}
 
 {% block head %}
-{{ super() }}
+
 {% endblock %}
 
 {% block styles %}
-{{super()}}
-    <link rel="stylesheet" href="{{url_for('.static', filename='base.css')}}">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+<link rel="stylesheet" href="{{url_for('.static', filename='base.css')}}">
+{% endblock %}
+
+{% block scripts %}
+{{ moment.include_moment() }}
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+<script type="text/javascript" src="{{url_for('static', filename='scripts/popup.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='scripts/like.js')}}"></script>
 {% endblock %}
 
 {% block navbar %}
@@ -17,36 +26,39 @@
 
 {% block content %}
 <div class="container">
-    <nav class="navbar">
+  <nav class="navbar">
     <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Memepedia</a>
+      <div class="navbar-header">
+        <a class="navbar-brand" href="{{url_for('.index')}}">Dank Dungeon</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li>
+        {% if current_user.is_authenticated %}
+            <p class="navbar-text" id="nav_current_user">signed in as {{ current_user.username }}</p>
+        {% endif%}
+        </li>
+        <li><a href="{{url_for('.home')}}">Home</a></li>
+        <li>
+          <a href="{{url_for('.profile')}}">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-square" fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd"
+                d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+              <path fill-rule="evenodd" d="M2 15v-1c0-1 1-4 6-4s6 3 6 4v1H2zm6-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a href="/home">Home</a></li>
-      <li><a href="/signup">Sign Up</a></li>
-      <li>
-        <a href="/profile">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-          <path fill-rule="evenodd" d="M2 15v-1c0-1 1-4 6-4s6 3 6 4v1H2zm6-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-        </svg>
-        </a>
-      </li>
-    </ul>
-    </div>
-    </nav>
+  </nav>
 
-    {% block page_content %}{% endblock %}
+{% block page_content %}{% endblock %}
 
-    <footer class="footer bg-dark">
-        <p>&copy; Company 2020</p>
-    </footer>
+<div id="popup"></div>
+
+<footer class="footer bg-dark">
+    <p>&copy; Team17 2020</p>
+</footer>
 
 </div>
-{% endblock %}
-
-{% block scripts %}
-{{ super() }}
-{{ moment.include_moment() }}
 {% endblock %}
