--- a/templates/index.html
+++ b/templates/index.html
@@ -5,51 +5,51 @@
 
 {% block styles %}
 {{super()}}
-    <link rel="stylesheet" href="{{url_for('static', filename='index.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='index.css')}}">
 {% endblock %}
 
 {% block page_content %}
 
 <div id="banner">
-    <h1 id="greeting">Welcome. Sign In to Unlock The Vibes.</h1>
-    <form method="post">
-      <a href="/signIn" type = "button" class = "btn btn-primary">Sign In</a>
-      <a href="/signup" type = "button" class = "btn btn-secondary">Create an Account</a>
-    </form>
+  <h1 id="greeting">Welcome. Sign In to Unlock The Vibes.</h1>
+  <form method="post">
+    <a href="{{url_for('.signIn')}}" type="button" class="btn btn-primary">Sign In</a>
+    <a href="{{url_for('.signUp')}}" type="button" class="btn btn-secondary">Create an Account</a>
+  </form>
 </div>
 
-<div id = "example_memes">
-    <div id="memes_carousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#memes_carousel" data-slide-to="0" class="active"></li>
-          <li data-target="#memes_carousel" data-slide-to="1"></li>
-          <li data-target="#memes_carousel" data-slide-to="2"></li>
-        </ol>
-      
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img src="{{url_for('static',filename='memes_img/img1.jpg')}}" alt="name of img" style="height: 300px;">
-          </div>
-          <div class="item">
-            <img src="{{url_for('static',filename='memes_img/img2.jpg')}}" alt="..." style="height: 300px;">
-          </div>
-          <div class="item">
-            <img src="{{url_for('static',filename='memes_img/img3.jpg')}}" alt="..." style="height: 300px;">
-          </div>
-        </div>
-      
-        <!-- Controls -->
-        <a class="left carousel-control" href="#memes_carousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#memes_carousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+<div id="example_memes">
+  <div id="memes_carousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#memes_carousel" data-slide-to="0" class="active"></li>
+      <li data-target="#memes_carousel" data-slide-to="1"></li>
+      <li data-target="#memes_carousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="{{url_for('static', filename='memes/' + memes[0].name)}}" alt="name of img" style="height: 300px;">
       </div>
+      <div class="item">
+        <img src="{{url_for('static', filename='memes/' + memes[1].name)}}" alt="..." style="height: 300px;">
+      </div>
+      <div class="item">
+        <img src="{{url_for('static', filename='memes/' + memes[2].name)}}" alt="..." style="height: 300px;">
+      </div>
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#memes_carousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#memes_carousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
 </div>
 
