--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,31 +1,75 @@
 {% extends "base.html" %}
-{% from 'memeCardRow.html' import memeCardRow %}
+{% from 'memeCardRow.html' import memeCardRow with context %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Memepedia Home{% endblock %}
 
 {% block styles %}
 {{super()}}
-    <link rel="stylesheet" href="{{url_for('static', filename='profile.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='profile.css')}}">
+{% endblock %}
+
+{% block scripts %}
+{{super()}}
+<script type="text/javascript" src="{{url_for('static', filename='scripts/upload.js')}}"></script>
 {% endblock %}
 
 {% block page_content %}
 
-<div class="container">
-    <div class="jumbotron">
-        <div class="row">
-            <div class="col-xs-6">
-                <img id="profileImage" src = "./static/memes_img/profile_icon.png">
-            </div>
-            <div class="col-xs-6">
-                <h2 id="username">{{ username }}</h2>
-                <p>Joined Memepedia on {{ joinDate }}</p>
-            </div>
+<div class="profile-header">
+    <div class="row">
+        <div class="col-xs-5">
+            <img id="profileImage" src="./static/memes_img/profile_icon.png">
+        </div>
+        <div class="col-xs-5">
+            <h2 id="username">{{ user.username }}</h2>
+            <p>Joined Memepedia on {{ user.joinDate }}</p>
+        </div>
+        <div class="col-xs-4">
+            <button class="btn btn-primary">Follow</button>
+            <p>12 Followers</p>
+            <p>10 Following</p>
         </div>
     </div>
 </div>
 
+<div id="user_uploads">
+    <h3>All Posts</h3>
+    {% if memes|length > 6 %}
+    {{ memeCardRow(memes[0:3], uploader_names=uploader_names) }}
+    {{ memeCardRow(memes[3:6], uploader_names=uploader_names) }}
+    {{ memeCardRow(memes[6:], uploader_names=uploader_names) }}
+    {% elif memes|length > 3 %}
+    {{ memeCardRow(memes[0:3], uploader_names=uploader_names) }}
+    {{ memeCardRow(memes[3:6], uploader_names=uploader_names) }}
+    {% elif memes|length > 0 %}
+    {{ memeCardRow(memes[0:3], uploader_names=uploader_names) }}
+    {% else %}
+    <h1>Ah Snap! You're fresh out of memes!</h1>
+    {% endif %}
 
-{{ memeCardRow() }}
+</div>
+
+{% if user.id == current_user.id %}
+
+<div id="file_upload">
+
+    <form id="upload" method="POST" action="" enctype="multipart/form-data">
+        <input id="name_input" type="file" name="file" style="display: none;">
+
+        <label for="name_input" class="btn btn-primary">
+            Upload
+        </label>
+        <label id="submit_button" for="submit_input" class="btn btn-secondary">
+            Submit
+        </label>
+        <input id="submit_input" type="submit" value="Submit" style="display: none;">
+    </form>
+
+</div>
+
+<a href="{{url_for('.signout')}}" type="button" class="btn btn-danger">Sign Out</a>
+
+{% endif %}
 
 {% endblock %}
