--- a/templates/signIn.html
+++ b/templates/signIn.html
@@ -5,13 +5,14 @@
 
 {% block styles %}
 {{super()}}
-    <link rel="stylesheet" href="{{url_for('.static', filename='signIn.css')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='signIn.css')}}">
 {% endblock %}
 
 {% block page_content %}
 
-<h1 id = "greeting">Log into your account.</h1>
+<h1 id="greeting">Log into your account.</h1>
 {{ wtf.quick_form(form) }}
 
+<p id="form_foot">Don't have an account? <a href="{{url_for('signUp')}}">Sign Up!</a></p>
 
 {% endblock %}
